Modulo de herramientas con calculadora de prestamo funcional

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -25,14 +25,14 @@
 
             <!-- Ícono de notificaciones (campana) -->
             <li class="nav-item dropdown" id="alertsDropdownWrapper" data-bs-auto-close="false">
-            <a class="nav-icon dropdown-toggle" href="#" id="alertsDropdown"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                <div class="position-relative">
-                <i class="align-middle" data-feather="bell"></i>
-                <span id="new-courses-count"
-                        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">0</span>
-                </div>
-            </a>
+                <a class="nav-icon dropdown-toggle bell-wiggle" href="#" id="alertsDropdown"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="position-relative">
+                    <i class="align-middle" data-feather="bell"></i>
+                    <span id="new-courses-count"
+                            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">0</span>
+                    </div>
+                </a>
 
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0"
                 aria-labelledby="alertsDropdown" style="min-width: 360px">
