--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -131,7 +131,7 @@
             <a class="sidebar-link d-flex justify-content-between align-items-center"
                 data-bs-toggle="collapse" data-bs-target="#menu-tools" href="#menu-tools"
                 role="button" aria-expanded="false" aria-controls="menu-tools">
-                <span><i class="fa-solid fa-id-card me-2"></i>Herramientas</span>
+                <span><i class="fa-solid fa-screwdriver-wrench me-2"></i>Herramientas</span>
                 <i class="fa-solid fa-chevron-down small"></i>
             </a>
 
