--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -126,7 +126,7 @@
                 </li>
             {% endif %} 
 
-            {% if user.is_authenticated and user.id == 64 %}
+            {% if user.is_authenticated and user.id == 64 or user.id == 79 %}
             <li class="sidebar-item">  <!-- <== sin 'active' -->
             <a class="sidebar-link d-flex justify-content-between align-items-center"
                 data-bs-toggle="collapse" data-bs-target="#menu-tools" href="#menu-tools"
