--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -53,7 +53,7 @@
             <!-- Menú del usuario -->
             <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#" data-bs-toggle="dropdown">
-                    <i class="align-middle" data-feather="settings"></i>
+                    <i class="align-middle" data-feather="user"></i>
                 </a>
 
                 <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
