ahora ya se puede cerrar el panel de la campanita presionando fuera

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -24,7 +24,7 @@
             </li>
 
             <!-- Ícono de notificaciones (campana) -->
-            <li class="nav-item dropdown" id="alertsDropdownWrapper" data-bs-auto-close="false">
+            <li class="nav-item dropdown" id="alertsDropdownWrapper" data-bs-auto-close="outside">
                 <a class="nav-icon dropdown-toggle bell-wiggle" href="#" id="alertsDropdown"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     <div class="position-relative">
