--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -11,7 +11,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-icon dropdown-toggle" href="#" id="settingsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                     <div class="position-relative">
-                        <i class="align-middle" data-feather="settings"></i>
+                            <i class="align-middle gear-icon" data-feather="settings"></i>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsDropdown">
