--- a/templates/news/admin/news_view_admin.html
+++ b/templates/news/admin/news_view_admin.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h2 class="mb-0">Noticias</h2>
-  <a href="{% url 'news_create' %}" class="btn btn-primary">+ Nueva noticia</a>
+  <a href="{% url 'news_create' %}" class="btn btn-primary">Nueva noticia</a>
 </div>
 
 <div class="card p-3">
