--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -5,17 +5,17 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-<div class="d-flex justify-content-between align-items-center">
-    <h1 class="mb-0">Administrador de cursos</h1>
-    
-    <div class="ms-auto d-flex gap-2">
-        <a href="{% url 'course_summary' %}" target="_blank" class="btn btn-outline-secondary">
-            <i class="fa-solid fa-chart-line me-1"></i> Resumen
-        </a>
-        <a href="{% url 'visual_course_wizard' %}" class="btn btn-primary">
-            <i class="fa-solid fa-graduation-cap"></i> Crear curso
-        </a>
-    </div>
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h1 class="mb-0">Administrador de cursos</h1>
+
+  <div class="ms-auto d-flex gap-2">
+    <a href="{% url 'course_summary' %}" target="_blank" class="btn btn-outline-secondary">
+      <i class="fa-solid fa-chart-line me-1"></i> Resumen
+    </a>
+    <a href="{% url 'visual_course_wizard' %}" class="btn btn-primary">
+      <i class="fa-solid fa-graduation-cap"></i> Crear curso
+    </a>
+  </div>
 </div>
 
     <div class="row">
